Fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -7971,7 +7971,7 @@ ul:last-child {
   text-align: center;
 }
 
-.align-center > * {
+.align-center img {
   margin: auto;
 }
 
