--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -60,7 +60,7 @@ ul {
 .align-center {
   text-align: center;
   
-  > * {
+  img {
     margin: auto;
   }
 }
